# cmake-init

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: ci.yml
cmake/: boost.cmake  clang-format.cmake  cppcheck.cmake
include/: CMakeLists.txt
include/cmake-init/: config.h  formatter.h  generation_context.h  project_writer.h  prompter.h
src/: CMakeLists.txt  cmake_lists_formatter.cpp  cmake_lists_formatter.h  config.cpp  config.h  formatter.cpp  generation_context.cpp  generation_context.h  main.cpp  pch.h  project_writer.cpp  prompter.cpp  prompter.h
tests/: CMakeLists.txt  config.cpp  formatter.cpp  generation_context.cpp  location.cpp  main.cpp
